--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
     </div>
     <!-- button arrows -->
     <div class="arrows">
-        <button id="prev"></button>
-        <button id="next"></button>
+        <button id="prev"> <</button>
+        <button id="next">></button>
     </div>
     <!-- thumbnail -->
     <div class="thumbnail">
@@ -179,45 +179,42 @@
     velit </p></div>
 
     
-        
-   <section class="bg-white" id="team">
+<!--    ------cards-------- -->
     <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h2 class="font-weight-bold mb-5">Meet the Team</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-5">
-                <div class="card" style="width: 18rem;">
-                    <img src="card1.jpg" class="card-img-top" alt="...">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                <div class="card">
+                    <img src="image1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Card title 1</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-5">
-                <div class="card" style="width: 18rem;">
-                    <img src="card1.jpg" class="card-img-top" alt="...">
+            <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                <div class="card">
+                    <img src="image2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Card title 2</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-5">
-                <div class="card" style="width: 18rem;">
-                    <img src="card1.jpg" class="card-img-top" alt="...">
+            <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                <div class="card">
+                    <img src="image3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Card title 3</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
+ 
         <!-- ------article----------- -->
 
         <main>
