--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
     </div>
     <!-- button arrows -->
     <div class="arrows">
-        <button id="prev"> <</button>
-        <button id="next">></button>
+        <button id="prev"><</button>
+        <button id="next"><</button>
     </div>
     <!-- thumbnail -->
     <div class="thumbnail">
@@ -184,7 +184,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-4 mx-auto">
                 <div class="card">
-                    <img src="image1.jpg" class="card-img-top" alt="...">
+                    <img src="card1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title 1</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -194,7 +194,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 mx-auto">
                 <div class="card">
-                    <img src="image2.jpg" class="card-img-top" alt="...">
+                    <img src="card2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title 2</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -204,7 +204,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 mx-auto">
                 <div class="card">
-                    <img src="image3.jpg" class="card-img-top" alt="...">
+                    <img src="card1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title 3</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
